# waypoint

./: .gitignore  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REFACTOR-BACKLOG.md  SETUP.md  WAYPOINT.md  build.rs  justfile
.claude/: settings.json
.github/workflows/: audit.yml  ci.yml
benches/: hook_latency.rs
docs/: future-features.md  improvement-plan.md  prd-import-refs.md  prd-structured-learnings.md  prd-waypoint-intelligence.md
src/: arch.rs  cli.rs  impact.rs  journal.rs  learning.rs  ledger.rs  lib.rs  main.rs  project.rs  status.rs  trap.rs
src/hook/: mod.rs  post_failure.rs  post_write.rs  pre_read.rs  pre_write.rs  session_start.rs  stop.rs
src/map/: extract.rs  index.rs  mod.rs  scan.rs
tests/: integration.rs
