[package]
name = "waypoint"
version = "0.1.0"
edition = "2024"

[lib]
name = "waypoint"
path = "src/lib.rs"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
