[package]
name = "waypoint"
version = "0.1.0"
edition = "2024"

[lib]
name = "waypoint"
path = "src/lib.rs"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
ignore = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
