[package]
name = "waypoint"
version = "0.5.0"
edition = "2024"

[lib]
name = "waypoint"
path = "src/lib.rs"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6"
ignore = "0.4.25"
regex = "1.12.3"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tree-sitter = "0.26.7"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24.1"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.2.0"
divan = "0.1.21"
predicates = "3.1.4"
tempfile = "3.27.0"

[[bench]]
name = "hook_latency"
harness = false

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
# Suppress pedantic lints that don't add value for an internal CLI
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_raw_string_hashes = "allow"
